noinst_LIBRARIES=libgraphgen.a
libgraphgen_a_SOURCES=btrd_binomial_distribution.c splittable_mrg.c mrg_transitions.c graph_generator.c permutation_gen.c apply_permutation_mpi.c make_graph.c utils.c scramble_edges.c
libgraphgen_a_CFLAGS=-Wall -Drestrict=__restrict__ -O3 -DNDEBUG -ffast-math -DGRAPH_GENERATOR_MPI -DGRAPHGEN_DISTRIBUTED_MEMORY
